# llama.cpp

./: .gitignore  CLAUDE.md  Dockerfile.dev  QUICKSTART-DAY1.md  QUICKSTART-DAY2.md  analyze_audio.py  check_eos_embedding.py  check_gguf_weights.py  check_hf_weights.py  convert_hf_to_gguf.py  docker-compose.dev.yml  docker-compose.hf-debug.yml  fp4_simple_test.cpp  list_gguf_tensors.py  test-fp4-direct.cu
docs/: BLACKWELL_FP4_RESEARCH.md  DAY9_COMPLETION.md  FP4_IMPLEMENTATION_PLAN.md  FP4_RESEARCH_SUMMARY.md  LESSONS_LEARNED.md  PROGRESS.md  TEST_RESULTS.md  qwen3-notes.md  qwen3-omni-gpu-optimization.md  qwen3-omni-implementation-plan.md  qwen3-omni-requirements.md  (+2 more)
tools/qwen3omni-tts/: CMakeLists.txt  DEBUG_PIPELINE.md  README.md  analyze_all_tokens.py  analyze_router.py  check_expert93.py  check_memory_layout.py  compare_all_fixed.py  compare_all_layers.py  compare_all_stages.py  compare_all_tokens_layers.py  compare_ffn_weights.py  compare_last_token.py  compare_layer0.py  compare_layer0_full.py  compare_layer2_moe_weights.py  compare_layer7.py  compare_layer_norms.py  compare_layer_scales.py  compare_layers.py  compare_logits.py  compare_moe_weights.py  compare_prefill.py  compare_qkv.py  compare_tensors.py  compare_token0_ffn_norm.py  compare_token0_layer2.py  compare_transconv.py  compare_weights.py  debug_dwconv.py  debug_hf_code2wav.py  debug_hf_hooks.py  debug_hf_layer_internals.py  debug_hf_pipeline.py  debug_hf_prefill_layers.py  debug_hf_prefill_logits.py  debug_hf_pretrans_layers.py  debug_hf_qkv.py  debug_hf_talker.py  debug_layer_scale.py  (+28 more)
(+49 files in other folders)
